--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- SEO Tag -->
     <meta name="author" content="Hari" />
     <meta name="language" content="en" />
-    <meta name="title" content="Wedding invite of hari and kowsalya" />
-    <meta name="description" content="Wedding invite of hari and kowsalya" />
+    <meta name="title" content="Wedding invite of Lalith and Srinidhi" />
+    <meta name="description" content="Wedding invite of Lalith and Srinidhi" />
 
     <!-- Appearance -->
     <link
@@ -276,9 +276,9 @@
                   onclick="util.modal(this)"
                 />
               </div>
-              <h2 class="font-esthetic" style="font-size: 3rem">Haribalan</h2>
+              <h2 class="font-esthetic" style="font-size: 3rem">Lalith Kumar</h2>
               <p class="mt-3 mb-0" style="font-size: 1.25rem">Son of</p>
-              <p class="mb-0">Rajendran &amp; Gomathi</p>
+              <p class="mb-0">Raghavendra &amp; Krishnaveni</p>
             </div>
 
             <!-- Love animation -->
@@ -331,9 +331,9 @@
                   onclick="util.modal(this)"
                 />
               </div>
-              <h2 class="font-esthetic" style="font-size: 3rem">Kowsalya</h2>
+              <h2 class="font-esthetic" style="font-size: 3rem">Srinidhi</h2>
               <p class="mt-3 mb-0" style="font-size: 1.25rem">Daughter of</p>
-              <p class="mb-0">Swaminathan &amp; Chandra</p>
+              <p class="mb-0">Rambabu &amp; Aparna</p>
             </div>
           </div>
 
@@ -478,13 +478,13 @@
             <div class="overflow-x-hidden">
               <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                 <h2 class="font-esthetic" style="font-size: 2rem">Muhurtham</h2>
-                <p>Nov 14, 2024, 7.30 AM - 9 AM</p>
+                <p>Nov 13, 2024, 10.18 AM</p>
               </div>
             </div>
 
             <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
               <a
-                href="https://maps.app.goo.gl/JvJLUsjcPLtcRR2q9"
+                href="https://maps.app.goo.gl/Wqa4UdXSdQTRdav68"
                 target="_blank"
                 class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3"
               >
@@ -492,7 +492,7 @@
                 Maps
               </a>
               <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem">
-                S.A.K Thirumana mahal, South 3rd street, Pudukkottai.
+                Rajdhani Gardens , Near Mahalakshmi Theatre, Opp. Vasavi kanyakaparameswari temple, Kothapet, Hyderabad, Telangana.
               </p>
             </div>
           </div>
@@ -550,15 +550,8 @@
             <div class="col-auto">
               <small>
                 <i class="fa-brands fa-github me-1"></i
-                ><a target="_blank" href="https://github.com/itzhari1996"
-                  >Hari</a
-                >
-              </small>
-              &nbsp;&&nbsp;
-              <small>
-                <i class="fa-brands fa-github me-1"></i
-                ><a target="_blank" href="https://github.com/Bharanidharan25"
-                  >Bharani</a
+                ><a target="_blank" href="https://github.com/LALITH123"
+                  >Lalith</a
                 >
               </small>
             </div>
@@ -597,7 +590,7 @@
           </div>
 
           <h2 class="font-esthetic-dark my-4" style="font-size: 2.5rem">
-            Hari &amp; Kowsalya
+            Lalith &amp; Srinidhi
           </h2>
 
           <a href="#" class="mt-5 open-invitation" onclick="util.open(this)">
