--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
 
           <h2 class="font-esthetic-dark my-4" style="font-size: 3rem">
-            Hari &amp; Kowsalya
+            Lalith &amp; Srinidhi
           </h2>
           <p class="mb-0" style="font-size: 1.5rem">Nov 14, 2024</p>
 
